--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
       "cordova-plugin-globalization": {},
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-network-information": {},
-      "cordova-plugin-vibration": {}
+      "cordova-plugin-vibration": {},
+      "com.bez4pieci.cookies": {},
+      "cordova-plugin-console": {},
+      "cordova-plugin-whitelist": {}
     }
   },
   "dependencies": {
-    "cordova-android": "^6.3.0",
+    "com.bez4pieci.cookies": "https://github.com/bez4pieci/Phonegap-Cookies-Plugin.git",
+    "cordova-android": "^7.0.0",
     "cordova-browser": "^5.0.3",
     "cordova-plugin-battery-status": "~1.2.4",
     "cordova-plugin-camera": "~2.4.1",
+    "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "~1.1.6",
     "cordova-plugin-dialogs": "~1.3.3",
     "cordova-plugin-file": "~4.3.3",
@@ -34,6 +39,8 @@
     "cordova-plugin-inappbrowser": "~1.7.1",
     "cordova-plugin-media-capture": "~1.4.3",
     "cordova-plugin-network-information": "~1.3.3",
-    "cordova-plugin-vibration": "~2.1.5"
+    "cordova-plugin-vibration": "~2.1.5",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-remove-cookies": "git+https://github.com/bez4pieci/Phonegap-Cookies-Plugin.git"
   }
 }
